API layout start

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,7 @@
 extends layout
 
-block content  
-  h1 Welcome to Nameless Warrior API
+block link
+  -var selected = 'Home';
+
+block content
+  h1.title Nameless Warrior
